# HeatSimulation

./: .gitignore  CMakeLists.txt  README.md
CMakeBuild/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
CMakeBuild/.cmake/api/v1/reply/: cache-v2-0de5a2d82bb49854ba0f.json  cmakeFiles-v1-9ae13b94988d7030d6de.json  codemodel-v2-112f38afd91254ec9ddf.json  index-2024-09-14T22-02-42-0413.json  target-HeatSimulation-Debug-1c8fc4aef851e909017f.json
src/: Grid.cpp  Grid.hpp  Particle.cpp  Particle.hpp  PhysicsUtility.cpp  PhysicsUtility.hpp  Scene.cpp  Scene.hpp  main.cpp
